# EVidenceModeler_rust

./: .gitignore  Cargo.toml  Changelog.txt  FUNANNOTATE_INTEGRATION_ANALYSIS.md  FUNANNOTATE_RUST_INTEGRATION_GUIDE.md  INSTALL.funannotate.md  LICENSE  LICENSE_EVidenceModeler.txt  Makefile  README.md
.github/workflows/: ci.yml
conda-recipe/: README.md  build.sh  meta.yaml
evm-cli/: Cargo.toml
evm-cli/src/: main.rs
evm-core/: Cargo.toml
evm-core/src/: lib.rs  pipeline.rs
evm-core/src/algo/: coding_scores.rs  consensus.rs  filter.rs  intergenic.rs  introns.rs  load_evidence.rs  load_predictions.rs  mod.rs  peaks.rs  phases.rs  process.rs  splice_sites.rs  trellis.rs
evm-core/src/gff3_convert/: evm_to_gff3.rs  gff3_to_bed.rs  gff3_to_proteins.rs  mod.rs
evm-core/src/io/: evm_output.rs  fasta.rs  gff3.rs  mod.rs  partitions.rs  weights.rs
evm-core/src/partition/: mod.rs  partition.rs
evm-core/src/recombine/: mod.rs  recombine.rs
evm-core/src/translate/: codon_table.rs  mod.rs
evm-core/src/types/: evidence.rs  exon.rs  genome.rs  mod.rs  prediction.rs
evm-core/tests/: golden_convert.rs  golden_elm.rs  golden_stopcodon.rs
evm-utils/: Cargo.toml
migration_docs/: FUNANNOTATE_RUST_INTEGRATION_GUIDE.md  MIGRATION_COMPLETE_CERTIFICATION.md  PARITY_REPORT.md
scripts/: install.sh
testing/: .gitignore  Makefile  runMe.rust.sh  runMe.sh
tests/fixtures/: Contig1.perl.EVM.bed  Contig1.perl.EVM.cds  Contig1.perl.EVM.pep  Contig1.perl.evm.out  Contig1.with_elm.perl.EVM.gff3  Contig1.with_elm.perl.evm.out  Contig_elm.perl.EVM.gff3  Contig_elm.perl.evm.out  Contig_stop.perl.EVM.gff3  Contig_stop.perl.evm.out  elm.gene_predictions.gff3  elm.genome.fasta  multicontig.perl.EVM.gff3  stopcodon.gene_predictions.gff3  stopcodon.genome.fasta  stopcodon.weights.txt
