[workspace]
members = [
    "evm-core",
    "evm-cli",
    "evm-utils",
]
resolver = "2"

[workspace.package]
version = "2.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hyphaltip/EVidenceModeler_rust"
description = "Rust port of EVidenceModeler — consensus gene modeler"
authors = ["Brian Haas", "Jason Stajich"]

[workspace.dependencies]
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
env_logger = "0.11"
log       = "0.4"
memchr    = "2"
phf       = { version = "0.11", features = ["macros"] }
rayon     = "1"
serde     = { version = "1", features = ["derive"] }
